# op-s5r2-data

./: README.md  expanded-data.csv  final-scores-expanded.csv  final.py  final_stats.py  funding.json  main.py  prelim.py  prelim_stats.py  pyproject.toml  raw-data.csv
data/: cycle-22-final-scores.csv
lib/: cell.py
