[tool.poetry]
name = "op-s5r2"
version = "0.1.0"
description = ""
authors = ["1a35e1 <1a35e1@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
